syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "lib/pagination.proto";

package LocationImages;

service LocationImages {
  rpc GetLocationImages(GetLocationImagesRequest) returns (stream LocationImage);
}

message GetLocationImagesRequest {
  Coordinates coordinates = 1;
  int64 radiusMeters = 2;
  Pagination.Request pagination = 3;
}

message Coordinates {
  string lat = 1;
  string lng = 2;
}

enum ImageSource {
  GeographUK = 0;
  Mapillary = 1;
  Flickr = 2;
  WikimediaCommons = 3;
  GeographDE = 4;
}

message ImageAttribution {
  string name = 1;
  string license = 2;
  string url = 3;
  ImageSource source = 4;
}

message LocationImage {
  string url = 1;
  string thumbnailUrl = 2;
  bool downloadable = 3;
  ImageAttribution attribution = 4;
  google.protobuf.Timestamp createdAt = 5;
  Coordinates coordinates = 6;
}
